# cmake-tutorial

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  config.in
lib/math/: CMakeLists.txt
lib/math/src/: custom-sqrt.cxx  make-table.cxx  math.cxx  math.hxx
src/: tutorial.cxx
